tests/script_runtime_errors/patch_on_non_obj/error.txt
Error: 
    1 | patch [] of
      |       ^^ Conflicting types, got array but expected record
    2 |   move "a" => "b"
    3 | end